2004-10-11  Dalibor Topic <robilad@kaffe.org>

	* libraries/javalib/java/io/PrintStream.java:
	Resynced with GNU Classpath.

	2004-10-11  Jeroen Frijters  <jeroen@frijters.net>

        * java/io/PrintStream.java
        (ForwardStream): New inner class.
        (PrintStream(OutputStream,boolean),
        PrintStream(OutputStream,boolean,String)):
        Changed to use ForwardStream.
        (write(int), write(byte[],int,int)):
        Don't consume thread interrupts.

2004-10-11  Dalibor Topic <robilad@kaffe.org>

	* libraries/javalib/java/util/logging/LogManager.java:
        Resynced with GNU Classpath.

	2004-10-11  Jeroen Frijters  <jeroen@frijters.net>

        * java/util/logging/LogManager.java
        (findAncestor): Fixed IndexOutOfBoundsException.

2004-10-11  Dalibor Topic <robilad@kaffe.org>

	* libraries/javalib/java/lang/SecurityManager.java,
	libraries/javalib/java/security/Security.java:
	Resynced with GNU Classpath.

	2004-10-11  Jeroen Frijters  <jeroen@frijters.net>

        * java/lang/SecurityManager.java
        (checkPackageList): Use AccessController.doPrivileged to get
        security property.
        * java/security/Security.java
        (static): Use AccessController.doPrivileged to get system property.

2004-10-11  Dalibor Topic <robilad@kaffe.org>

	* libraries/javalib/java/security/IdentityScope.java:
	Replaced by implementation from GNU Classpath.

	* libraries/javalib/java/awt/Button.java,
	libraries/javalib/java/awt/EventDispatchThread.java,
	libraries/javalib/java/awt/Frame.java,
	libraries/javalib/java/awt/Scrollbar.java,
	libraries/javalib/java/awt/TextArea.java,
	libraries/javalib/java/net/HttpURLConnection.java,
	libraries/javalib/java/security/Policy.java,
	libraries/javalib/java/util/Timer.java,
	libraries/javalib/java/util/logging/LogRecord.java,
	libraries/javalib/javax/naming/spi/NamingManager.java,
	libraries/javalib/javax/swing/JDialog.java,
	libraries/javalib/javax/swing/JFrame.java,